# temp_Shaik-codes

./: CMakeLists.txt  a.out  fork.c  main.c  simple_thread.c
Cmake/: README.txt
Cmake/HelloWorld/: hellolib.c  hellolib.h
TCP_Server/: a.out  server.c  server1.c
TCP_client/: a.out  client.c  client1.c
